# AI-Media-Factory

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.planning/: ROADMAP.md  STATE.md
.planning/phases/04-text-to-speech-audio-timing/: 04-01-SUMMARY.md  04-02-SUMMARY.md
app/: celery_app.py  config.py  db.py  ffmpeg_utils.py  main.py  storage.py
app/api/: health.py  preview.py  scripts.py  videos.py
app/models/: __init__.py  audio.py  project.py  script.py  script_media.py  subtitle.py  task.py  video.py
app/services/: __init__.py  compose_service.py  media_service.py  model_provider.py  orchestrator.py  script_generator.py  subtitle_service.py  tts_service.py  voice_manager.py
app/tasks/: __init__.py  compose_tasks.py  media_tasks.py  script_tasks.py  subtitle_tasks.py  test_tasks.py  tts_tasks.py  video_pipeline.py
app/web/: app.js  index.html  style.css
benchmarks/: generate_report.py  pipeline_benchmark.py  requirements-benchmark.txt
config/: database.yaml  models.yaml  redis.yaml
remotion/: package-lock.json  package.json  tsconfig.json
remotion/player/: App.tsx  index.html
remotion/src/: Subtitles.tsx  VideoComposition.tsx  index.ts  parseSubtitles.test.ts  parseSubtitles.ts  render.mjs
scripts/: dev_bootstrap.py
tests/: test_infra.py  test_lm_studio.py  test_media_matching.py  test_model_provider.py  test_openai.py  test_script_generation.py  test_script_quality.py  test_subtitle_sync_accuracy.py  test_subtitles.py  test_ux_completion.py  test_web_api.py
(+20 files in other folders)
