[project]
name = "ai-media-factory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
    "ffmpeg-python>=0.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "litellm>=1.0",
    "pyyaml>=6.0",
    "edge-tts>=7.0",
    "srt>=5.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
